--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   </head>
   <body>
     <header>
-      <h1>north</h1>
+      <h1><img src="north-logo.png" alt="north"/></h1>
       <span class="version">1.0.0</span>
       <p class="description">oAuth 1.0a server and client implementation, the successor to South.</p>
     </header>
